clean up layout bug to enable cleaning zoom in and zoom out

--- a/docs/0002-tic-tac-toe/styles/styles.css
+++ b/docs/0002-tic-tac-toe/styles/styles.css
@@ -85,8 +85,6 @@ svg {
 }
 
 .intro-bar{
-  position: absolute;
-  top: 5rem;
   text-transform: uppercase;
   font-size: 4rem;
   font-weight: bold;
